#32444-Space needs to be added in between avo discover header and avo discover url,#32432-Mapped Users table alignment issue

--- a/app/src/pages/admin/styles/AvoDiscoverConfig.scss
+++ b/app/src/pages/admin/styles/AvoDiscoverConfig.scss
@@ -1,48 +1,84 @@
+@import "../../global/styles/ColorVariables.scss";
+.adminActionBtn .a__btn:disabled {
+    opacity: 0.5;
+}
+
+.discover_containerwrap{
+    height: 100%;
+    width: inherit;
+    float: left;
+    padding-bottom: 55px;
+}
+
+.form-group-ip{
+    margin-bottom:15px;
+    float: left;
+}
+.adminForm-ip {
+	padding-top: 5%;
+}
+
 .discover_container{
     width: 100%;
     padding: 20px;
     height: 100%;
 
-    .discover_containerwrap{
-        height: 70%;
-    }
-
-    .col-xs-9{
-        width: 83%;
-    }
-    .adminActionBtn{
-        padding-bottom: 5%;
-    }
     .input-label {
         margin-top: 0;
     }
     .discover_input{
-        label{
-            width: 120px;
-        }
-    }
-    .adminActionBtn .a__btn:disabled {
-        opacity: 0.5;
-    }
-    .avoDiscover_UserForm{
+        margin-bottom: 3%;
+        padding: 0px 0px;
+        position: relative;
         float: left;
-        width: 100%;
-    }
-    .map{    
-        float: right;
-        margin-right: 274px;
-        margin-top: -51px;
-        z-index: 2;
-        position: relative;
-    }
-    .refresh{
-        float: right;
-        margin-right: 168px;
-        margin-top: -50px;
-        position: relative;
+        width: 130%;
     }
 }
+
+.avoDiscover_UserForm{
+    float: left;
+    width: 100%;
+}
+
+.avoDiscover_UserForm .refresh{
+    margin-left: -110px;
+}
+
+.avoDiscover_UserForm .map{
+    float: right;
+    margin-right: 430px;
+    margin-top: -51px;
+    position: relative;
+}
+
 .refresh_avodiscover{
     visibility: visible;
     float : left;
+}
+
+.AvoDiscoverHeading{
+	padding-left: 10px;
+	display: flex;
+	background: $whisper;
+	cursor: pointer;
+	width: 100%;
+	margin-bottom: 3px;
+}
+
+.AvoDiscoverHeading h4{
+    margin-top: 10px;
+    flex-grow: 1;
+    margin-bottom: 10px;
+	display: inline-block;
+	padding-right: 5px;
+    user-select: none;
+    font-size: 18px;
+}
+
+.AvoDiscoverHeading:hover {
+	background: $backgroundOne;
+}
+
+.wrap-cust-ip{
+    max-height: 450px;
 }
